--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -1,8 +1,11 @@
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 main, header, footer{
-    min-width: 200px;
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 1000px;
     padding: 50px;
     background-color: antiquewhite;
 }
@@ -10,8 +13,6 @@ main, header, footer{
 #screen{
     width: 90%;
     height: 80%;
-    margin-left: auto;
-    margin-right: auto;
     padding: 50px;
     background-color: rgb(252, 202, 138);
 }
