--- a/frontend/src/styles/admin.css
+++ b/frontend/src/styles/admin.css
@@ -1,55 +1,96 @@
 form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-  
-  .categories {
-    display: grid;
-    gap: 0.5rem;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding-block: 0.5rem;
-  }
-  
-  .row {
-    flex-direction: row;
-    align-items: center;
-    gap: 0.5rem;
-  }
-  
-  .form__question {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    position: relative;
-    border-bottom: 1px solid var(--primary-pink-light);
-    margin-top: 1rem;
-    padding-bottom: 1rem;
-  }
-  
-  legend {
-    font-size: 1.25rem;
-    margin-bottom: 0.5rem;
-  }
-  
-  .form__options {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-  
-  .form__options label {
-    margin-bottom: 0.25rem;
-  }
-  
-  .form__row {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    column-gap: 8px;
-  }
-  
-  .btn-icon {
-    position: absolute;
-    top: -32px;
-    right: 0;
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.categories {
+  display: grid;
+  gap: 0.5rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding-block: 0.5rem;
+}
+
+.row {
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.form__question {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  position: relative;
+  border-bottom: 1px solid var(--primary-pink-light);
+  margin-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+legend {
+  font-size: 1.25rem;
+  margin-bottom: 0.5rem;
+}
+
+.form__options {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.form__options label {
+  margin-bottom: 0.25rem;
+}
+
+.form__row {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  column-gap: 8px;
+}
+
+.btn-icon {
+  position: absolute;
+  top: -32px;
+  right: 0;
+}
+
+li li svg {
+  margin-right: 0.25rem;
+}
+
+.btn-sm {
+  font-size: 0.9rem;
+  padding: 4px 16px;
+}
+
+.list__question {
+  position: static !important;
+  padding: 1rem;
+}
+
+.list__footer {
+  padding-top: 0.5rem;
+}
+
+.list__question .btn-icon {
+  position: static !important;
+}
+
+.list__question:not(:last-child) {
+  border-bottom: 2px solid var(--primary-pink-light);
+}
+
+dialog {
+  color: var(--primary-white);
+  background-color: rgb(106, 24, 54);
+  border: none;
+  border-radius: 8px;
+  padding: 2rem;
+  max-height: 90%;
+  overflow-y: auto;
+  margin: auto;
+}
+
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.3);
+}
