--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -81,9 +81,38 @@ header {
 
 .options {
   display: grid;
+  gap: 8px;
+}
+
+.options-4 {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 8px;
+}
+
+.options-2 {
+  grid-template-rows: 1fr 1fr;
+}
+
+/* Index */
+.options-2 fieldset {
+  display: flex;
+  flex-direction: row;
+}
+
+.options-2 label {
+  flex: 1;
+  position: relative;
+  background-color: var(--primary-pink);
+  border-radius: 8px;
+}
+
+.options-2 label > input[type='radio'] {
+  position: absolute;
+  outline: 1px solid red;
+  width: 100%;
+  height: 100%;
+
+  
 }
 
 /* Base typography styles */
@@ -110,7 +139,8 @@ h5 {
 }
 
 h1 {
-  font-size: 3.5rem;
+  font-size: 3.25rem;
+  font-weight: 400;
 }
 
 h2 {
