--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -47,7 +47,7 @@ body {
 main,
 header,
 footer {
-  width: 1000px;
+  width: 100%;
   padding: 50px;
 }
 
@@ -89,30 +89,58 @@ header {
   grid-template-rows: 1fr 1fr;
 }
 
+/* INDEX PAGE */
 .options-2 {
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: repeat(2, auto);
+  gap: 2rem;
 }
 
-/* Index */
+.options-2 legend {
+  text-align: start;
+  margin-bottom: 0.5rem;
+}
+
 .options-2 fieldset {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  justify-content: flex-start;
+  grid-template-columns: repeat(auto-fill, minmax(224px, 1fr));
+  gap: 0.5rem;
 }
 
 .options-2 label {
-  flex: 1;
+  display: flex;
+  place-content: center;
   position: relative;
-  background-color: var(--primary-pink);
+  border: 2px solid var(--primary-pink);
   border-radius: 8px;
+  cursor: pointer;
+  font-size: 1.15rem;
+
+  height: 5rem;
+  padding: 16px 8px;
 }
 
 .options-2 label > input[type='radio'] {
   position: absolute;
-  outline: 1px solid red;
   width: 100%;
   height: 100%;
+  cursor: pointer;
+  opacity: 0;
+}
 
-  
+/* Adds visible focus outline even when the actual input element is hidden */
+.options-2 label:focus-within {
+  outline: 2px solid white;
+}
+
+.options-2 label:hover {
+  border: 2px solid var(--primary-pink);
+  background-color: var(--primary-pink-subtle);
+}
+
+.options-2 label:has(input[type='radio']:checked) {
+  border: 2px solid var(--primary-pink);
+  background-color: var(--primary-pink);
 }
 
 /* Base typography styles */
