--- a/frontend/src/styles/admin.css
+++ b/frontend/src/styles/admin.css
@@ -1,3 +1,60 @@
+body {
+  display: grid;
+  align-items: start;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: auto 1fr;
+}
+
+header {
+  grid-area: 1 / 1 / 1 / 3;
+}
+
+aside {
+  display: inline-flex;
+  flex: 0 0 0;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 2rem;
+  height: 100%;
+  width: 15rem;
+  min-width: fit-content;
+  grid-area: 2 / 1 / 3 / 1;
+}
+
+section {
+  padding: 2rem;
+  grid-area: 2 / 2 / 3 / 3;
+  overflow: auto;
+  height: 100%;
+  border-top: 1px solid black;
+  border-left: 1px solid black;
+}
+
+ul {
+  display: inline-flex;
+  flex-direction: column;
+  list-style: none;
+}
+
+.btn-list {
+  width: 100%;
+  border: none;
+  border-radius: 0;
+  background-color: transparent;
+  text-align: start;
+  padding-inline: 8px;
+}
+
+.btn-list:hover {
+  background-color: var(--primary-pink-subtle);
+}
+
+#add-btns {
+  display: inline-flex;
+  gap: 0.5rem;
+  flex-direction: column;
+}
+
 form {
   display: flex;
   flex-direction: column;
